# faceView

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  INTERFACE.md  README.md  ROADMAP.md  SESSION_Log.md  main.py  pyproject.toml
.github/workflows/: test.yml
docs/: FACE_RESEARCH.md  MCP_RECIPES.md  MODELS.md  REALISM_ASSESSMENT.md  TROUBLESHOOTING.md
docs/images/: ict_jelly_ranking.json  nod_quadrant_assessment.json
src/faceview/: __init__.py  __main__.py  app.py  config.py
src/faceview/assets/: __init__.py  body_label_overrides_female_baked.json  body_label_overrides_male_baked.json  body_part_labels_female.npz  body_part_labels_female_orig.npz  body_part_labels_male.npz  body_part_labels_male_orig.npz
src/faceview/assets/body_meshes/: body_female.mtl
src/faceview/assets/config/: au_definitions.json  characters.json  expression_muscles.json  expressions.json  personas.json
src/faceview/assets/config/anatomy/: brain.json  cervical_vertebrae.json  expression_muscles.json  eye_colors.json  face_features.json  jaw_muscles.json  neck_muscles.json  skin.json  skull_bones.json
src/faceview/assets/data/: cmu_dict_compact.json
src/faceview/core/: __init__.py  consent.py  errors.py  event_bus.py  events.py  logger.py  supervisor.py  webhooks.py
src/faceview/gui/: __init__.py  avatar_panel.py  avatar_window.py  camera_panel.py  character_editor.py  chat_panel.py  config_dialog.py  effects_panel.py  layout.py  main_window.py  perception_panel.py  persona_picker.py  room_map_panel.py  screenshotter.py  shortcuts_dialog.py  status_panel.py  theme.py  transcript_panel.py
src/faceview/gui/controllers/: __init__.py  audio_ctrl.py  avatar_ctrl.py  base.py  camera_ctrl.py  enrollment_ctrl.py  monitor_ctrl.py  test_mode_ctrl.py  tts_ctrl.py
src/faceview/gui/monitors/: __init__.py  audio.py  emotion.py  mouth.py  transcript.py
src/faceview/llm/: __init__.py  character.py  claude_client.py  cognition.py  conversation.py  embeddings.py  ollama_client.py  plugins.py  telemetry.py  test_conversation.py  vision_tool.py
src/faceview/server/: __init__.py  api.py  mcp_server.py  openai_compat.py  service.py
src/faceview/speech/: __init__.py  audio_capture.py  stt.py  tts.py  tts_kokoro.py  vad.py
src/faceview/utils/: __init__.py  headless.py  paths.py
src/faceview/vision/: __init__.py  anatomy.py  anatomy_brain.py  anatomy_catalog.py  anatomy_eyeballs.py  anatomy_meshes.py  anatomy_muscle_masses.py  anatomy_overlay.py  anatomy_skull.py  arkit_blendshapes.py  avatar.py  bfm_face.py  body_3d.py  body_rig.py  bp3d_landmarks.py  camera.py  clip_query.py  color.py  deca_capture.py  depth.py  effects.py  effects_post.py  effects_pre.py  effects_runtime.py  emotion.py  emotion_feedback.py  expressions.py  face_attr.py  face_state.py  face_warp.py  face_warp_atlas.py  faceforge_bridge.py  facescape_face.py  flame_face.py  frame_buffer.py  gaze_target.py  gestures.py  gpu_renderer.py  hair_3d.py  hair_overlay.py  (+34 more)
tests/: conftest.py  test_anatomical_render.py  test_anatomy.py  test_anatomy_catalog.py  test_anatomy_layers.py  test_arkit_blendshapes.py  test_audio_envelope_and_theme.py  test_avatar.py  test_batch_a.py  test_batch_b.py  test_batch_c.py  test_body_rig_regression.py  test_chat_find.py  test_chat_markdown.py  test_coarticulation.py  test_cognition_per_person.py  test_cognition_retrieval.py  test_conversation.py  test_event_bus.py  test_face_warp.py  test_gpu_renderer.py  test_head_3d_lite.py  test_head_decimated.py  test_ict_face.py  test_ollama_bridge.py  test_openai_compat.py  test_optional_face_bridges.py  test_people.py  test_perception.py  test_personas.py  test_plugins_emotion_multiface.py  test_privacy_and_compaction.py  test_room_map.py  test_room_map_calibration.py  test_room_map_tool.py  test_scene_caption.py  test_screen_capture.py  test_screenshot.py  test_service.py  test_service_avatar.py  (+8 more)
tools/: __init__.py  _build_tour_grid.py  _capture_nod_sideview.py  _compare_nod_modes.py  _compare_seams.py  _compare_weight_modes.py  _gui_tour.sh  _inspect_fliers.py  _neck_base_sweep.py  _nod_drift_inspect.py  _nod_drift_measure.py  _nod_final_compare.py  _nod_motion_overlay.py  _nod_overlay_compare.py  _nod_table.py  _quadrant_motion_assess.py  _render_effect_test.py  _render_with_persona.py  animate_3d_modes.py  animate_anatomical.py  animate_anatomy_layers.py  animate_default_avatar.py  animate_jelly_assessment.py  animate_jelly_middle.py  animate_talking.py  animate_xray_glow.py  animate_xray_moods.py  bake_label_overrides.py  build_ict_blendshapes.py  capture_gui_screenshots.py  capture_recent_features.py  copy_anatomy_meshes.py  diff_pose_offenders.py  effect_flyaway_relabel.py  extreme_pose_relabel.py  faceview_drive.py  faceview_monitor.py  isolated_voxel_relabel.py  rank_ict_jelly_fit.py  render_neutral_face_texture.py  (+5 more)
