[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "faceview"
version = "0.1.0"
description = "Multimodal face/voice/chat GUI for interacting with LLMs and Claude Code"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "George Dickinson" }]
license = { text = "MIT" }
keywords = ["llm", "claude", "gui", "speech", "face-recognition", "multimodal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "PySide6>=6.6",
    "anthropic>=0.39",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "numpy>=1.24",
    "pillow>=10.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-qt>=4.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
speech = [
    "sounddevice>=0.4.6",
    "faster-whisper>=1.0",
    "silero-vad>=5.0",
    "pyttsx3>=2.90",
]
vision = [
    "opencv-python>=4.9",
    "mediapipe>=0.10.14",
]
gpu = [
    "moderngl>=5.10",
    "scipy>=1.10",
]
identity = [
    "insightface>=0.7",
    "onnxruntime>=1.17",
]
emotion = [
    "deepface>=0.0.90",
]
mcp = [
    "mcp>=1.0",
]
full = [
    "faceview[speech,vision,identity,emotion,mcp,gpu]",
]

[project.scripts]
faceview = "faceview.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
faceview = ["assets/config/*.json", "assets/data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
qt_api = "pyside6"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]
extend-exclude = ["docs", ".faceview", "owner_data"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501", # line too long — many existing comments live with it
    "E731", # do not assign a lambda
    "B008", # function call in default arg (FastAPI Depends pattern)
    "B904", # `raise ... from err` — many places already use bare raise
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "E402"]
"tools/**" = ["E402"]

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
    "**/.faceview",
    "**/docs",
    "**/owner_data",
    "src/faceview/vision/anatomy_overlay.py",  # legacy renderer, drifted
    "src/faceview/vision/effects.py",
    "src/faceview/vision/effects_post.py",
    "src/faceview/vision/effects_pre.py",
    "src/faceview/vision/effects_runtime.py",
]
pythonVersion = "3.11"
pythonPlatform = "Darwin"
typeCheckingMode = "basic"
# Heavy ML deps are lazy-imported; pyright can't see them without
# pulling the env, so silence missing-import where it doesn't matter.
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportPrivateImportUsage = false
